--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,11 +1,12 @@
 // custom SCSS (or CSS) goes here
-.site-nav{
-
+body{
+  scrollbar-width: thin;
 }
 
 /* 为滚动容器添加类名 'custom-scrollbar' */
 .site-nav {
   overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
  
 /* 美化滚动条的样式 */
@@ -29,7 +30,7 @@
 /*  firfox */
 .site-nav {
   scrollbar-width: thin;
-  scrollbar-color: #888 #f1f1f1;
+  /* scrollbar-color: #888 #f1f1f1; */
 }
 /*  ie  edge */
 .site-nav {
